# vehicle-specification-editor

./: .gitignore  CONTRIBUTING.md  Highlighter.py  PyPi-README.md  README.md  Vehicle_window.py  __main__.py  config.json  pyproject.toml  requirements.txt  run.py  run_gui.py  user_cache.json  vehicle_lang-0.16.1-cp310-cp310-linux_x86_64.whl
ast_parse/: __init__.py  golden_spec.json  wind_controller.json
pygments/: pyproject.toml  setup.py  vse_style.py
pygments/pygmments-plugin-vse/: pyproject.toml
schemas/: check-error.json  check.json  resources.json  verify.json
temp/: temp
test/cache/: .vcl-cache-index  property3-query1.txt  property3.vcl-plan
test/cache/property3-assignments/: "y"
ui/: CodeEditor.py  LineNumberArea.py  ResourceBox.py  VCLBindings.py  VehicleWidget.py  __init__.py  __main__.py  _run_vcl.py  code_editor.py  counter_example_tab.py  counter_examples_viewer.py  decode_counter_examples.py  heirachical_output.py  hierarchical_output.py  line_number_area.py  main_widget.py  property_selection_widget.py  query_tab.py  resource_box.py  vcl_bindings.py  vcl_utils.py  vcl_widget.py
ui/config/: menu.json
ui/counter_example_view/: counter_example_tab.py  extract_renderers.py  test_renderer_loading.py
ui/counter_examples/: decode_counter_examples.py  render_counter_examples.py  render_modes.py
ui/query_view/: query_tab.py
ui/query_view/graphics/: block_graphics.py  edge_graphics.py  graphics_scene.py  graphics_view.py
ui/query_view/verification/: workflow.py
ui/view/: __init__.py  base_types.py  dummy_types.py  graphics_scene.py  graphics_view.py
ui/view/component/: __init__.py  block_graphics.py  edge_graphics.py  graphics_block.py  graphics_edge.py  graphics_socket.py  inspector.py  socket_graphics.py
ui/view/styling/: __init__.py  custom.py  dimension.py  display.py  palette.py
ui/view/verification/: __init__.py  blocks.py  model.py  workflow.py
vehicle_gui/: __main__.py  main_widget.py  quantified_vars_box.py  vcl_bindings.py  vcl_utils.py
vehicle_gui/counter_example_view/: base_renderer.py  counter_example_tab.py  extract_renderers.py  variable_selection_widget.py
vehicle_gui/query_view/: query_tab.py
vehicle_gui/query_view/graphics/: graphics_scene.py  socket_graphics.py
vehicle_gui/resource_view/: property_view.py  quantified_var_widget.py
