[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-gui"
version = "0.1.3"
description = "A GUI frontend for the vehicle command line tool"
readme = "PyPi-README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.7.0,<7.0",
    "vehicle_lang>=0.17.0,<0.20",
    "superqt>=0.7.0,<0.8",
    "idx2numpy>=1.2.0,<1.5",
    "Pygments>=2.18.0,<3.0"
]

[project.scripts]
vehicle-gui = "ui.__main__:main"

[project.entry-points."pygments.lexers"]
external = "ui.external:ExternalLexer"

